src/snapshots/tptp__common__tests__name-3.snap
---
source: src/common.rs
expression: parsed
---
AtomicWord(
    SingleQuoted(
        SingleQuoted(
            "single quoted",
        ),
    ),
)
