src/snapshots/tptp__common__tests__name.snap
---
source: src/common.rs
expression: parsed
---
AtomicWord(
    Lower(
        LowerWord(
            "lower_word2",
        ),
    ),
)
