src/snapshots/tptp__common__tests__number-3.snap
---
source: src/common.rs
expression: parsed
---
Rational(
    Rational(
        "-123/456",
    ),
)
