src/snapshots/tptp__common__tests__system_constant.snap
---
source: src/common.rs
expression: parsed
---
SystemConstant(
    SystemFunctor(
        AtomicSystemWord(
            DollarDollarWord(
                LowerWord(
                    "system_constant",
                ),
            ),
        ),
    ),
)
