src/snapshots/tptp__common__tests__system_functor.snap
---
source: src/common.rs
expression: parsed
---
SystemFunctor(
    AtomicSystemWord(
        DollarDollarWord(
            LowerWord(
                "system_functor",
            ),
        ),
    ),
)
