src/snapshots/tptp__common__tests__type_constant.snap
---
source: src/common.rs
expression: parsed
---
TypeConstant(
    TypeFunctor(
        Lower(
            LowerWord(
                "type_constant",
            ),
        ),
    ),
)
