src/snapshots/tptp__common__tests__type_functor.snap
---
source: src/common.rs
expression: parsed
---
TypeFunctor(
    Lower(
        LowerWord(
            "type_functor",
        ),
    ),
)
