src/snapshots/tptp__common__tests__untyped_atom-3.snap
---
source: src/common.rs
expression: parsed
---
System(
    SystemConstant(
        SystemFunctor(
            AtomicSystemWord(
                DollarDollarWord(
                    LowerWord(
                        "system_constant",
                    ),
                ),
            ),
        ),
    ),
)
