src/snapshots/tptp__common__tests__untyped_atom.snap
---
source: src/common.rs
expression: parsed
---
Constant(
    Constant(
        Functor(
            Lower(
                LowerWord(
                    "constant",
                ),
            ),
        ),
    ),
)
